patch request filters workaround, environment test launch test mongo itself